Fix footer sizing on mobile

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -366,25 +366,25 @@ nav button.openbtn {
     background-color: #1f1f1f;
     color: rgba(255, 255, 255, .4);
     text-align: center;
-    padding: 6.4rem 3.2rem;
+    padding: 4rem 1rem;
 }
 
 #footer h5 {
     display: inline-block;
-    padding: 2rem 2rem;
+    padding: 2rem 0;
 }
 
-#footer h5 {
-    font-size: 1.2rem;
+#footer h5, #footer a {
+    font-size: 1.1rem;
     text-align: center;
+    color: #fafafa;
+    display: block;
 }
 
 #footer-email {
     color: rgba(255, 255, 255, 0.8);
     white-space: nowrap;
     letter-spacing: .2rem;
-    font-size: 1.1rem;
-    padding: 2rem 0;
 }
 
 #footer-copyright {
